package com.subterranean_security.crimson.core.proto;

import "net/sequences/ClientAuth.proto";
import "net/misc/Misc.proto";

message GenReport {
	required bool result = 1;
	required int32 gen_time = 2;
	optional string comment = 3;
	optional string hash_md5 = 4;
	optional string hash_sha256 = 5;
	optional int32 fileSize = 6;
	optional string output_type = 7;
}

message ClientConfig {
	//general
	required string output_type = 1;
	
	optional int32 delay = 3;
	optional bool always_imsg = 4;
	optional string imsg = 5;

	//network
	repeated NetworkTarget target = 6;
	required int32 reconnect_period = 7;

	//execution
	optional bool melt = 8;
	optional string path_win = 9;
	optional string path_lin = 10;
	optional string path_osx = 11;
	optional string path_sol = 12;
	optional string path_bsd = 13;

	optional string viewer_user = 14;
	
	required AuthType authType = 21;
	optional Group group = 22;
	optional string password = 23;

	//for parser only
	optional bool waiver = 20;
}

message NetworkTarget {
	required string server = 1;
	required int32 port = 2;
}

message RQ_Generate {
	required ClientConfig internal_config = 1;
}

message RS_Generate {
	required GenReport report = 1;
	optional bytes installer = 2;
}